// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Assessment Converter oboToSlate converts an OboNode to a Slate node 1`] = `
Object {
  "data": Object {
    "content": Object {
      "rubric": true,
      "scoreActions": "someScoreActions",
      "triggers": Array [],
    },
  },
  "key": "mockKey",
  "nodes": Array [
    Object {
      "oboToSlateReturnFor": Object {
        "type": "ObojoboDraft.Pages.Page",
      },
    },
    Object {
      "oboToSlateReturnFor": Object {
        "type": "otherType",
      },
    },
    Object {
      "oboToSlateReturnFor": "someScoreActions",
    },
    Object {
      "oboToSlateReturnFor": true,
    },
  ],
  "object": "block",
  "type": "ObojoboDraft.Sections.Assessment",
}
`;

exports[`Assessment Converter oboToSlate converts an OboNode to a Slate node 2`] = `
Object {
  "data": Object {
    "content": Object {
      "rubric": false,
      "scoreActions": "someScoreActions",
      "triggers": Array [
        Object {
          "actions": Array [
            Object {
              "type": "nav:lock",
            },
          ],
          "type": "onNavEnter",
        },
        Object {
          "actions": Array [
            Object {
              "type": "nav:unlock",
            },
          ],
          "type": "onEndAttempt",
        },
        Object {
          "actions": Array [
            Object {
              "type": "nav:unlock",
            },
          ],
          "type": "onNavExit",
        },
      ],
    },
  },
  "key": "mockKey",
  "nodes": Array [
    Object {
      "oboToSlateReturnFor": Object {
        "type": "ObojoboDraft.Pages.Page",
      },
    },
    Object {
      "oboToSlateReturnFor": Object {
        "type": "otherType",
      },
    },
    Object {
      "oboToSlateReturnFor": "someScoreActions",
    },
  ],
  "object": "block",
  "type": "ObojoboDraft.Sections.Assessment",
}
`;

exports[`Assessment Converter slateToObo converts a Slate node to an OboNode 1`] = `
Object {
  "children": Array [
    Object {
      "slateToOboReturnFor": "ObojoboDraft.Pages.Page",
    },
    Object {
      "slateToOboReturnFor": "ObojoboDraft.Chunks.QuestionBank",
    },
  ],
  "content": Object {
    "rubric": Object {
      "slateToOboReturnFor": "ObojoboDraft.Sections.Assessment.Rubric",
    },
    "triggers": Array [],
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`Assessment Converter slateToObo converts a Slate node to an OboNode 2`] = `
Object {
  "children": Array [
    Object {
      "slateToOboReturnFor": "ObojoboDraft.Pages.Page",
    },
    Object {
      "slateToOboReturnFor": "ObojoboDraft.Chunks.QuestionBank",
    },
  ],
  "content": Object {
    "rubric": Object {
      "slateToOboReturnFor": "ObojoboDraft.Sections.Assessment.Rubric",
    },
    "triggers": undefined,
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`Assessment Converter slateToObo converts a Slate node to an OboNode 3`] = `
Object {
  "children": Array [
    Object {
      "slateToOboReturnFor": "ObojoboDraft.Pages.Page",
    },
    Object {
      "slateToOboReturnFor": "ObojoboDraft.Chunks.QuestionBank",
    },
  ],
  "content": Object {
    "rubric": Object {
      "slateToOboReturnFor": "ObojoboDraft.Sections.Assessment.Rubric",
    },
    "triggers": Array [
      Object {
        "type": "someTrigger",
      },
    ],
  },
  "id": "mockKey",
  "type": "mockType",
}
`;
